Fixed overflow styling issues on funds page

--- a/web/src/containers/page/funds/style.large.scss
+++ b/web/src/containers/page/funds/style.large.scss
@@ -23,10 +23,19 @@
             display: flex;
             flex-basis: initial;
             flex-wrap: nowrap;
+
+            &.popout {
+                z-index: 10;
+                overflow: visible;
+
+                .graph-container {
+                    box-shadow: none;
+                }
+            }
         }
         li > span.transactions {
             flex-basis: 102px;
-            overflow: visible;
+            overflow: visible !important;
             .modal {
                 position: absolute;
                 left: 0;
@@ -179,7 +188,6 @@
                 background: transparent;
             }
             .popout {
-                position: fixed;
                 z-index: 10;
                 background: rgba(255, 255, 255, 0.8);
                 box-shadow: 0 3px 7px rgba(20, 20, 20, 0.3);
